# metrix

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
src/: algorithm.h  containers.h  enum.h  type_list.h  type_traits.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
